# sevdesk-archiver

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/sevdesk_archiver/: __init__.py  archive.py  cli.py  exceptions.py  sevdesk.py  utils.py
src/sevdesk_archiver/templates/: archive_index.html  serve-archive.sh  serve.py
tests/: test_archive.py  test_verify_archive.py
