[project]
name = "sevdesk-archiver"
version = "0.1.1"
description = "Standalone tool to build a local, self-serving archive of SevDesk documents (invoices, credit notes, vouchers)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "ARJOMA FlexCo", email = "info@arjoma.at" },
]
keywords = ["sevdesk", "archive", "invoices", "accounting", "backup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: System :: Archiving",
]
dependencies = [
    "click>=8.1",
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/arjoma/sevdesk-archiver"
Repository = "https://github.com/arjoma/sevdesk-archiver"
Issues = "https://github.com/arjoma/sevdesk-archiver/issues"

[project.scripts]
sevdesk-archiver = "sevdesk_archiver.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sevdesk_archiver"]

[tool.hatch.build.targets.sdist]
include = [
    "src/sevdesk_archiver",
    "README.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "mypy>=1.10",
    "types-requests>=2.32",
    "pyright>=1.1.380",
    "ruff>=0.5",
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = false
no_implicit_optional = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
